fix right alignment

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,10 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  padding: 8px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 4px;
+  justify-content: space-between;
   
 }
 
@@ -20,6 +20,8 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
+  margin: 0;
+  padding: 0;
   gap: 8px;
 
 }
